k8s/system.kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-api
  labels:
    app: sample-app
    msservice: system-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 5
  selector:
    matchLabels:
      msservice: system-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        msservice: system-api
        app: sample-app
        tier: service
    spec:
      containers:
        - name: system-api
          image: "deadlychambers/soinshane-k8s-system:6.0.1.11"
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "125m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /System
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /System
              port: 80
            initialDelaySeconds: 5
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: system-api
  labels:
    msservice: system-api
    app: sample-app
    tier: service
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 80
  selector:
    msservice: system-api
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: system-api
#   labels:
#     msservice: system-api
#     app: sample-app
#     tier: backend
# spec:
#   backend:
#     serviceName: system-api
#     servicePort: 8080
# If you run this, ensure you run minikube tunnel
# apiVersion: v1
# kind: Service
# metadata:
#   name: my-service
# spec:
#   selector:
#     app: MyApp
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 9376
#   clusterIP: 10.0.171.239
#   type: LoadBalancer
# status:
#   loadBalancer:
#     ingress:
#     - ip: 192.0.2.127
